tests/outref/TC011.ref

-- TC011 : OCTO411 : Add support for INTEGER precision specification to parser for CREATE TABLE statements

-- Test that INTEGER(precision) type works
CREATE TABLE names (id INTEGER(64) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
SELECT id FROM names;
SELECT id::integer FROM names;
SELECT id::numeric FROM names;
SELECT id::varchar FROM names;
SELECT id::text FROM names;
SELECT id::date FROM names;
SELECT id::time FROM names;

-- Test that NUMERIC(precision) type works
DROP TABLE names;
CREATE TABLE names (id NUMERIC(10) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
SELECT id FROM names;
SELECT id::integer FROM names;
SELECT id::numeric FROM names;
SELECT id::varchar FROM names;
SELECT id::text FROM names;
SELECT id::date FROM names;
SELECT id::time FROM names;

-- Test that NUMERIC(precision,scale) type works
DROP TABLE names;
CREATE TABLE names (id NUMERIC(10,4) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
SELECT id FROM names;
SELECT id::integer FROM names;
SELECT id::numeric FROM names;
SELECT id::varchar FROM names;
SELECT id::text FROM names;
SELECT id::date FROM names;
SELECT id::time FROM names;

-- Test various precision and scale values with INTEGER and NUMERIC (some work, some issue error)
DROP TABLE names;
CREATE TABLE names (id INTEGER(4) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id INTEGER(8) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id INTEGER(16) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id INTEGER(32) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id INTEGER(64) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id INTEGER(127) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id INTEGER(0) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id INTEGER(-1) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id INTEGER(-1.5) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id INTEGER(15.5) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id INTEGER('abcd') PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id INTEGER(abcd) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;

DROP TABLE names;
CREATE TABLE names (id NUMERIC(4) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id NUMERIC(8) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id NUMERIC(16) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id NUMERIC(32) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id NUMERIC(64) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id NUMERIC(127) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id NUMERIC(0) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id NUMERIC(-1) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id NUMERIC(-1.5) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id NUMERIC(15.5) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id NUMERIC('abcd') PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id NUMERIC(abcd) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;

DROP TABLE names;
CREATE TABLE names (id NUMERIC(4,2) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id NUMERIC(8,7) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id NUMERIC(16,18) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id NUMERIC(32,25) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id NUMERIC(64,2047) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id NUMERIC(127,85.5) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id NUMERIC(0,100.87) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id NUMERIC(-1,20) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id NUMERIC(-1.5,-2.5) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id NUMERIC(15.5,20.835) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id NUMERIC('abcd',20.835) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id NUMERIC('abcd','efgh') PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id NUMERIC(abcd,'efgh') PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;
CREATE TABLE names (id NUMERIC(abcd,efgh) PRIMARY KEY, firstName VARCHAR(30), lastName TEXT(30)) GLOBAL "^names(keys(""id""))" READONLY;
DROP TABLE names;

CREATE TABLE
id
0
1
2
3
4
5
(6 rows)
id
0
1
2
3
4
5
(6 rows)
id
0
1
2
3
4
5
(6 rows)
id
0
1
2
3
4
5
(6 rows)
id
0
1
2
3
4
5
(6 rows)
id
0
1
2
3
4
5
(6 rows)
id
0
1
2
3
4
5
(6 rows)
DROP TABLE
CREATE TABLE
id
0
1
2
3
4
5
(6 rows)
id
0
1
2
3
4
5
(6 rows)
id
0
1
2
3
4
5
(6 rows)
id
0
1
2
3
4
5
(6 rows)
id
0
1
2
3
4
5
(6 rows)
id
0
1
2
3
4
5
(6 rows)
id
0
1
2
3
4
5
(6 rows)
DROP TABLE
CREATE TABLE
id
0
1
2
3
4
5
(6 rows)
id
0
1
2
3
4
5
(6 rows)
id
0
1
2
3
4
5
(6 rows)
id
0
1
2
3
4
5
(6 rows)
id
0
1
2
3
4
5
(6 rows)
id
0
1
2
3
4
5
(6 rows)
id
0
1
2
3
4
5
(6 rows)
DROP TABLE
CREATE TABLE
DROP TABLE
CREATE TABLE
DROP TABLE
CREATE TABLE
DROP TABLE
CREATE TABLE
DROP TABLE
CREATE TABLE
DROP TABLE
CREATE TABLE
DROP TABLE
CREATE TABLE
DROP TABLE
LINE 47:1: CREATE TABLE names (id INTEGER(-1) PRIMARY KEY, firstName VARCH...
                                          ^
syntax error, unexpected MINUS, expecting LITERAL
[ERROR]: ERR_CANNOT_DROP_TABLE: Cannot DROP table "names" as it does not exist
LINE 49:1: CREATE TABLE names (id INTEGER(-1.5) PRIMARY KEY, firstName VAR...
                                          ^
syntax error, unexpected MINUS, expecting LITERAL
[ERROR]: ERR_CANNOT_DROP_TABLE: Cannot DROP table "names" as it does not exist
[ERROR]: ERR_INVALID_INTEGER_SYNTAX: Invalid input syntax for type integer: '15.5'
LINE 51:1: ...REATE TABLE names (id INTEGER(15.5) PRIMARY KEY, firstName VARCH...
                                            ^^^^
[ERROR]: ERR_CANNOT_DROP_TABLE: Cannot DROP table "names" as it does not exist
[ERROR]: ERR_INVALID_INTEGER_SYNTAX: Invalid input syntax for type integer: 'abcd'
LINE 53:1: ...EATE TABLE names (id INTEGER('abcd') PRIMARY KEY, firstName VARC...
                                           ^^^^^^
[ERROR]: ERR_CANNOT_DROP_TABLE: Cannot DROP table "names" as it does not exist
LINE 55:1: ...REATE TABLE names (id INTEGER(abcd) PRIMARY KEY, firstName VARCH...
                                            ^^^^
syntax error, unexpected IDENTIFIER_ALONE, expecting LITERAL
[ERROR]: ERR_CANNOT_DROP_TABLE: Cannot DROP table "names" as it does not exist
CREATE TABLE
DROP TABLE
CREATE TABLE
DROP TABLE
CREATE TABLE
DROP TABLE
CREATE TABLE
DROP TABLE
CREATE TABLE
DROP TABLE
CREATE TABLE
DROP TABLE
CREATE TABLE
DROP TABLE
LINE 72:1: CREATE TABLE names (id NUMERIC(-1) PRIMARY KEY, firstName VARCH...
                                          ^
syntax error, unexpected MINUS, expecting LITERAL
[ERROR]: ERR_CANNOT_DROP_TABLE: Cannot DROP table "names" as it does not exist
LINE 74:1: CREATE TABLE names (id NUMERIC(-1.5) PRIMARY KEY, firstName VAR...
                                          ^
syntax error, unexpected MINUS, expecting LITERAL
[ERROR]: ERR_CANNOT_DROP_TABLE: Cannot DROP table "names" as it does not exist
[ERROR]: ERR_INVALID_INTEGER_SYNTAX: Invalid input syntax for type integer: '15.5'
LINE 76:1: ...REATE TABLE names (id NUMERIC(15.5) PRIMARY KEY, firstName VARCH...
                                            ^^^^
[ERROR]: ERR_CANNOT_DROP_TABLE: Cannot DROP table "names" as it does not exist
[ERROR]: ERR_INVALID_INTEGER_SYNTAX: Invalid input syntax for type integer: 'abcd'
LINE 78:1: ...EATE TABLE names (id NUMERIC('abcd') PRIMARY KEY, firstName VARC...
                                           ^^^^^^
[ERROR]: ERR_CANNOT_DROP_TABLE: Cannot DROP table "names" as it does not exist
LINE 80:1: ...REATE TABLE names (id NUMERIC(abcd) PRIMARY KEY, firstName VARCH...
                                            ^^^^
syntax error, unexpected IDENTIFIER_ALONE, expecting LITERAL
[ERROR]: ERR_CANNOT_DROP_TABLE: Cannot DROP table "names" as it does not exist
CREATE TABLE
DROP TABLE
CREATE TABLE
DROP TABLE
[ERROR]: ERR_NUMERIC_SCALE: Numeric scale 18 must be between zero(0) and precision 16
LINE 87:1: ...EATE TABLE names (id NUMERIC(16,18) PRIMARY KEY, firstName VARC...
                                          ^^^^^^^
[ERROR]: ERR_CANNOT_DROP_TABLE: Cannot DROP table "names" as it does not exist
CREATE TABLE
DROP TABLE
[ERROR]: ERR_NUMERIC_SCALE: Numeric scale 2047 must be between zero(0) and precision 64
LINE 91:1: ...ATE TABLE names (id NUMERIC(64,2047) PRIMARY KEY, firstName VAR...
                                         ^^^^^^^^^
[ERROR]: ERR_CANNOT_DROP_TABLE: Cannot DROP table "names" as it does not exist
[ERROR]: ERR_INVALID_INTEGER_SYNTAX: Invalid input syntax for type integer: '85.5'
LINE 93:1: ...E TABLE names (id NUMERIC(127,85.5) PRIMARY KEY, firstName VARCH...
                                            ^^^^
[ERROR]: ERR_CANNOT_DROP_TABLE: Cannot DROP table "names" as it does not exist
[ERROR]: ERR_INVALID_INTEGER_SYNTAX: Invalid input syntax for type integer: '100.87'
LINE 95:1: ...TE TABLE names (id NUMERIC(0,100.87) PRIMARY KEY, firstName VARC...
                                           ^^^^^^
[ERROR]: ERR_CANNOT_DROP_TABLE: Cannot DROP table "names" as it does not exist
LINE 97:1: CREATE TABLE names (id NUMERIC(-1,20) PRIMARY KEY, firstName VA...
                                          ^
syntax error, unexpected MINUS, expecting LITERAL
[ERROR]: ERR_CANNOT_DROP_TABLE: Cannot DROP table "names" as it does not exist
LINE 99:1: CREATE TABLE names (id NUMERIC(-1.5,-2.5) PRIMARY KEY, firstNam...
                                          ^
syntax error, unexpected MINUS, expecting LITERAL
[ERROR]: ERR_CANNOT_DROP_TABLE: Cannot DROP table "names" as it does not exist
[ERROR]: ERR_INVALID_INTEGER_SYNTAX: Invalid input syntax for type integer: '15.5'
LINE 101:1: ...REATE TABLE names (id NUMERIC(15.5,20.835) PRIMARY KEY, firstNam...
                                             ^^^^
[ERROR]: ERR_CANNOT_DROP_TABLE: Cannot DROP table "names" as it does not exist
[ERROR]: ERR_INVALID_INTEGER_SYNTAX: Invalid input syntax for type integer: 'abcd'
LINE 103:1: ...EATE TABLE names (id NUMERIC('abcd',20.835) PRIMARY KEY, firstNa...
                                            ^^^^^^
[ERROR]: ERR_CANNOT_DROP_TABLE: Cannot DROP table "names" as it does not exist
[ERROR]: ERR_INVALID_INTEGER_SYNTAX: Invalid input syntax for type integer: 'abcd'
LINE 105:1: ...EATE TABLE names (id NUMERIC('abcd','efgh') PRIMARY KEY, firstNa...
                                            ^^^^^^
[ERROR]: ERR_CANNOT_DROP_TABLE: Cannot DROP table "names" as it does not exist
LINE 107:1: ...REATE TABLE names (id NUMERIC(abcd,'efgh') PRIMARY KEY, firstNam...
                                             ^^^^
syntax error, unexpected IDENTIFIER_ALONE, expecting LITERAL
[ERROR]: ERR_CANNOT_DROP_TABLE: Cannot DROP table "names" as it does not exist
LINE 109:1: ...REATE TABLE names (id NUMERIC(abcd,efgh) PRIMARY KEY, firstName ...
                                             ^^^^
syntax error, unexpected IDENTIFIER_ALONE, expecting LITERAL
[ERROR]: ERR_CANNOT_DROP_TABLE: Cannot DROP table "names" as it does not exist
